--- a/pan_de_reserve/templates/pan_de_reserve/result.html
+++ b/pan_de_reserve/templates/pan_de_reserve/result.html
@@ -39,7 +39,7 @@
         const checkoutButton = document.querySelector('.checkout-button');
         checkoutButton.addEventListener('click', () => {
             // 遷移先のURLを指定
-            window.location.href = '/index'; // ここを遷移先のページに変更
+            window.location.href = '/add_pan'; // ここを遷移先のページに変更
         });
 
     </script>
