--- a/pan_de_reserve/templates/pan_de_reserve/management.html
+++ b/pan_de_reserve/templates/pan_de_reserve/management.html
@@ -12,10 +12,14 @@
         <!-- Header section -->
         <div class="header">
             <h1>パン屋</h1>
-        </div>
-
+        </div>    
     <div class="item-details">
-        
+        <div class="buttons">
+            <button class="configbutton">予約一覧</button>
+            <button class="configbutton">パン一覧</button>
+            <button class="configbutton">パン追加</button>
+        <div>
+
         <!-- Total and checkout -->
         <div class="checkout">
             <button class="checkout-button">最初に戻る</button>
